fix horizontal overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,7 +5,7 @@
 
 .appWrapper {
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: grid;
   grid-template-areas: 
   "header header"
